--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 <section class="hero">
     <div class="hero-form">
        
+       
     <h3>Get Started Today</h3>
     <p>Fill out this form and one of our trainers will schedule a consult</p>
     <!-- Add form element -->
@@ -115,7 +116,7 @@
          <article class="trainer">
              <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes,ready to pump iron" />
              <div class="trainer-bio">
-                 <h3>Arron Stephens text-left</h3>
+                 <h3>Arron Stephens</h3>
                  <h4>Speed / Strength</h4>
                  <p>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
@@ -183,12 +184,14 @@
     </address>
 </div>
 </section>
-<!-- footer -->
+
+
 <footer>
     <div>
         <a href="#">Read Our Privacy Policy</a><br />
         &copy; 2019 Run Buddy, Inc.
       </div>
-    <h2> ❤️ Made with love by Run Buddy</h2>
+      <h2>❤️ Made with love by Run Buddy.</h2>
 </footer>
+
 </body>
