flexbox to body

--- a/index.html
+++ b/index.html
@@ -77,15 +77,29 @@
 
 <!-- "what we do" section -->
 <section id="What-we-do" class="intro">
-    <h2 class="section-title primary-border">What We Do</h2>
-    <p>
+    <!--Wrap every h2 with a class of "section-title"in this div-->
+    <div class="flex-row"></div>
+      <h2 class="section-title primary-border">
+        What We Do
+      </h2>
+    </div>
+</section>
+<section>
+    <div class="flex-row">
+        <p>
         butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
-    </p>
+        </p>
+    </div>
 </section>
 
 <!-- "What You Do" section -->
 <section id="What-you-do" class="steps">
-    <h2 class="section-title secondary-border"> What You Do</h2>
+    <div class="flex-row">
+       <h2 class="section-title secondary-border">
+         What You Do
+        </h2>
+    </div>
+</section>
 
     <div>
         <!-- insert this img element-->
@@ -113,9 +127,11 @@
 
 <!-- "meet the trainers" section -->
 <section id="Your-trainers" class="trainers">
-    <h2 class="section-title primary-border">
+    <div class="flex-row">
+       <h2 class="section-title primary-border">
          Meet The Trainers
-         </h2>
+        </h2>
+    </div>    
          <article class="trainer">
              <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes,ready to pump iron" />
              <div class="trainer-bio">
