--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <!-- "what we do" section -->
 <section id="What-we-do" class="intro">
     <!--Wrap every h2 with a class of "section-title"in this div-->
-    <div class="flex-row"></div>
+    <div class="flex-row">
       <h2 class="section-title primary-border">
         What We Do
       </h2>
@@ -101,28 +101,52 @@
     </div>
 </section>
 
-    <div>
-        <!-- insert this img element-->
-        <img src="./assets/images/step-1.svg" alt=""/>
-        <h3>Step 1: <span Out the Form Above.</h3>
-        <p>You're already here, so why not?</p>
+    <div class="step">
+        <h3>Step 1.</h3>
+        <div class="step-info">
+            <div class="step-img">
+               <img src="./assets/images/step-1.svg" alt=""/>
+            </div>
+             <div class="step-text">
+                <h4>Fill Out the Form Above</h4>
+                <p>You're already here, so why not?</p>
+             </div>
+        </div>
+    </div>    
+    <div class="step">
+        <h3>Step 2.</h3>
+        <div class="step-info">
+            <div class="step-img">
+                <img src="./assets/images/step-2.svg" alt="" />
+            </div>
+            <div class="step-text">
+                <h4>Consult With One of Our Trainers</h4>
+            </div>
+        </div>
     </div>
-    <div>
-        <img src="./assets/images/step-2.svg" alt="" />
-        <h3>Step 2: <span Consult with One of Our Trainers.</h3>
-    </div>
-
-    <div>
-        <img src="./assets/images/step-3.svg" alt="">/
-        <h3>Step 3: <span Get Running.</h3>
-        <p>Hit the ground running(literally) once your trainers lays out your plan.</p>
-    </div>
-
-    <div>
-        <img src="./assets/images/step-4.svg" alt="">/
-        <h3>Step 4: <span  See Results.</h3>
-        <p>Bi-weekly checkins with your trainer will keep you focused</p>
-    </div>
+        <div class="step">
+            <h3> Step 3.</h3>
+            <div class="step-info">
+                <div class="step img">
+                    <img src="./assets/images/step-3.svg" alt="">/
+                </div>
+                <div class="step-text">
+                    <h4>Get Running</h4>
+                    <p> Hit the ground running(literally) once your trainers lays out your plan.</p>
+                </div>
+            </div>
+        </div>
+        <div class="step">
+            <h3> Step 4.</h3>
+            <div class="step-info">
+            <div class="step-img">
+                <img src="./assets/images/step-4.svg" alt="">/
+            </div>
+            <div class="step-text">
+                <h4> See Results</h4>
+                <p>Bi-weekly checkins with your trainer will keep you focused.</p>
+            </div>
+        </div>
 </section>
 
 <!-- "meet the trainers" section -->
@@ -171,7 +195,11 @@
 
 <!-- reach out" section -->
 <section id="reach-out" class="contact">
-<h2 class="section-title secondary-border"> Reach Out</h2>
+<div class="flex-row">
+    <h2 class="section-title secondary-border"> 
+        Reach Out
+    </h2>
+</div>
     <div class="contact-info">
         <div class="contact-form">
             <h3>Contact Us</h3>
